@startuml
'https://plantuml.com/sequence-diagram

hide circle
skinparam classAttributeIconSize 0
title UML POKEMON

class trainer_struct {
    - _nombre: std::string
    - _pokemon1: std::string
    - _pokemon2: std::string
    - _pokemon3: std::string
    - _pokemon4: std::string
    - _pokemon5: std::string
    - _pokemon6: std::string
}

class trainer_database {
    - _trainers_data: std::vector<trainers_struct>
}

class pokemon_database {
    - _pokemon_data: static std::vector<pokemon>
}

class pokemon_battle {
    - _player: trainers_struct
    - _enemy: trainers_struct
    - _playerTeam: vector<pokemon>
    - _pokemonActual: int
    - _enemyTeam: vector<pokemon>
    - _pokemonEnemyActual: int
    - _wildPokemon: pokemon
    - _numPociones: int
    - _mode: string
    - _difficulty: string
}

class pokemon {
     - _nombre = "null": string
     - _type1 = "null": string
     - _type2 = "null": string
     + _pv = -1: double
     - _attack = -1: int
     - _defense = -1: int
     - _special_attack = -1: int
     - _special_defese = -1: int
     - _speed = -1: int
     - _move1 = "null": string
     - _move2 = "null": string
     - _move3 = "null": string
     - _move4 = "null": string
}

class move_struct {
    - nombre: std::string
    - move_type: std::string
    - damage: int
    - pp: int
    - type_of_damage: std::string
}
class move_database {
    - _move_data: static std::vector<move_struct>
}


move_database *- "Movimientos" move_struct

pokemon_database *-- "_pokemon_data" pokemon

trainer_database *-- "_trainers_data" trainer_struct


pokemon_battle o---- "_playerTeam \n_enemyTeam \n_wildPokemon" pokemon

pokemon_battle <-- "_player \n_enemy \n2" trainer_struct
pokemon_battle <.. "Movimientos" move_database
pokemon_battle <.. "move_to_use" move_struct
pokemon_battle <. pokemon_database


@enduml